// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BisectDialog component renders 1`] = `
<Blueprint3.Dialog
  canOutsideClickClose={true}
  className="dialog-add-version"
  isOpen={false}
  onClose={[Function]}
  title="Start a bisect session"
>
  <div
    className="bp3-dialog-body"
  >
    <Component>
      Earliest Version
      <Blueprint3.ButtonGroup
        fill={true}
      >
        <VersionSelect
          appState={
            Object {
              "channelsToShow": Array [
                "Stable",
              ],
              "setVersion": [MockFunction],
              "statesToShow": Array [
                "ready",
              ],
              "versions": Array [
                Object {
                  "source": "local",
                  "state": "ready",
                  "version": "1.0.0",
                },
                Object {
                  "source": "local",
                  "state": "ready",
                  "version": "2.0.0",
                },
                Object {
                  "source": "local",
                  "state": "ready",
                  "version": "3.0.0",
                },
                Object {
                  "source": "local",
                  "state": "ready",
                  "version": "4.0.0",
                },
                Object {
                  "source": "local",
                  "state": "ready",
                  "version": "5.0.0",
                },
              ],
              "versionsToShow": Array [
                Object {
                  "source": "local",
                  "state": "ready",
                  "version": "1.0.0",
                },
                Object {
                  "source": "local",
                  "state": "ready",
                  "version": "2.0.0",
                },
                Object {
                  "source": "local",
                  "state": "ready",
                  "version": "3.0.0",
                },
                Object {
                  "source": "local",
                  "state": "ready",
                  "version": "4.0.0",
                },
                Object {
                  "source": "local",
                  "state": "ready",
                  "version": "5.0.0",
                },
              ],
            }
          }
          currentVersion={
            Object {
              "source": "local",
              "state": "ready",
              "version": "4.0.0",
            }
          }
          onVersionSelect={[Function]}
        />
      </Blueprint3.ButtonGroup>
    </Component>
    <Component>
      Latest Version
      <Blueprint3.ButtonGroup
        fill={true}
      >
        <VersionSelect
          appState={
            Object {
              "channelsToShow": Array [
                "Stable",
              ],
              "setVersion": [MockFunction],
              "statesToShow": Array [
                "ready",
              ],
              "versions": Array [
                Object {
                  "source": "local",
                  "state": "ready",
                  "version": "1.0.0",
                },
                Object {
                  "source": "local",
                  "state": "ready",
                  "version": "2.0.0",
                },
                Object {
                  "source": "local",
                  "state": "ready",
                  "version": "3.0.0",
                },
                Object {
                  "source": "local",
                  "state": "ready",
                  "version": "4.0.0",
                },
                Object {
                  "source": "local",
                  "state": "ready",
                  "version": "5.0.0",
                },
              ],
              "versionsToShow": Array [
                Object {
                  "source": "local",
                  "state": "ready",
                  "version": "1.0.0",
                },
                Object {
                  "source": "local",
                  "state": "ready",
                  "version": "2.0.0",
                },
                Object {
                  "source": "local",
                  "state": "ready",
                  "version": "3.0.0",
                },
                Object {
                  "source": "local",
                  "state": "ready",
                  "version": "4.0.0",
                },
                Object {
                  "source": "local",
                  "state": "ready",
                  "version": "5.0.0",
                },
              ],
            }
          }
          currentVersion={
            Object {
              "source": "local",
              "state": "ready",
              "version": "1.0.0",
            }
          }
          onVersionSelect={[Function]}
        />
      </Blueprint3.ButtonGroup>
    </Component>
  </div>
  <div
    className="bp3-dialog-footer"
  >
    <div
      className="bp3-dialog-footer-actions"
    >
      <Blueprint3.Button
        disabled={true}
        icon="play"
        key="submit"
        onClick={[Function]}
        text="Begin"
      />
      <Blueprint3.Button
        icon="cross"
        key="cancel"
        onClick={[Function]}
        text="Cancel"
      />
    </div>
  </div>
</Blueprint3.Dialog>
`;

exports[`BisectDialog component renders 2`] = `
<Blueprint3.Dialog
  canOutsideClickClose={true}
  className="dialog-add-version"
  isOpen={false}
  onClose={[Function]}
  title="Start a bisect session"
>
  <div
    className="bp3-dialog-body"
  >
    <Component>
      Earliest Version
      <Blueprint3.ButtonGroup
        fill={true}
      >
        <VersionSelect
          appState={
            Object {
              "channelsToShow": Array [
                "Stable",
              ],
              "setVersion": [MockFunction],
              "statesToShow": Array [
                "ready",
              ],
              "versions": Array [
                Object {
                  "source": "local",
                  "state": "ready",
                  "version": "1.0.0",
                },
                Object {
                  "source": "local",
                  "state": "ready",
                  "version": "2.0.0",
                },
                Object {
                  "source": "local",
                  "state": "ready",
                  "version": "3.0.0",
                },
                Object {
                  "source": "local",
                  "state": "ready",
                  "version": "4.0.0",
                },
                Object {
                  "source": "local",
                  "state": "ready",
                  "version": "5.0.0",
                },
              ],
              "versionsToShow": Array [
                Object {
                  "source": "local",
                  "state": "ready",
                  "version": "1.0.0",
                },
                Object {
                  "source": "local",
                  "state": "ready",
                  "version": "2.0.0",
                },
                Object {
                  "source": "local",
                  "state": "ready",
                  "version": "3.0.0",
                },
                Object {
                  "source": "local",
                  "state": "ready",
                  "version": "4.0.0",
                },
                Object {
                  "source": "local",
                  "state": "ready",
                  "version": "5.0.0",
                },
              ],
            }
          }
          onVersionSelect={[Function]}
        />
      </Blueprint3.ButtonGroup>
    </Component>
    <Component>
      Latest Version
      <Blueprint3.ButtonGroup
        fill={true}
      >
        <VersionSelect
          appState={
            Object {
              "channelsToShow": Array [
                "Stable",
              ],
              "setVersion": [MockFunction],
              "statesToShow": Array [
                "ready",
              ],
              "versions": Array [
                Object {
                  "source": "local",
                  "state": "ready",
                  "version": "1.0.0",
                },
                Object {
                  "source": "local",
                  "state": "ready",
                  "version": "2.0.0",
                },
                Object {
                  "source": "local",
                  "state": "ready",
                  "version": "3.0.0",
                },
                Object {
                  "source": "local",
                  "state": "ready",
                  "version": "4.0.0",
                },
                Object {
                  "source": "local",
                  "state": "ready",
                  "version": "5.0.0",
                },
              ],
              "versionsToShow": Array [
                Object {
                  "source": "local",
                  "state": "ready",
                  "version": "1.0.0",
                },
                Object {
                  "source": "local",
                  "state": "ready",
                  "version": "2.0.0",
                },
                Object {
                  "source": "local",
                  "state": "ready",
                  "version": "3.0.0",
                },
                Object {
                  "source": "local",
                  "state": "ready",
                  "version": "4.0.0",
                },
                Object {
                  "source": "local",
                  "state": "ready",
                  "version": "5.0.0",
                },
              ],
            }
          }
          onVersionSelect={[Function]}
        />
      </Blueprint3.ButtonGroup>
    </Component>
  </div>
  <div
    className="bp3-dialog-footer"
  >
    <div
      className="bp3-dialog-footer-actions"
    >
      <Blueprint3.Button
        disabled={true}
        icon="play"
        key="submit"
        onClick={[Function]}
        text="Begin"
      />
      <Blueprint3.Button
        icon="cross"
        key="cancel"
        onClick={[Function]}
        text="Cancel"
      />
    </div>
  </div>
</Blueprint3.Dialog>
`;

exports[`BisectDialog component renders 3`] = `
<Blueprint3.Dialog
  canOutsideClickClose={true}
  className="dialog-add-version"
  isOpen={false}
  onClose={[Function]}
  title="Start a bisect session"
>
  <div
    className="bp3-dialog-body"
  >
    <Component>
      Earliest Version
      <Blueprint3.ButtonGroup
        fill={true}
      >
        <VersionSelect
          appState={
            Object {
              "channelsToShow": Array [
                "Stable",
              ],
              "setVersion": [MockFunction],
              "statesToShow": Array [
                "ready",
              ],
              "versions": Array [
                Object {
                  "source": "local",
                  "state": "ready",
                  "version": "1.0.0",
                },
                Object {
                  "source": "local",
                  "state": "ready",
                  "version": "2.0.0",
                },
                Object {
                  "source": "local",
                  "state": "ready",
                  "version": "3.0.0",
                },
                Object {
                  "source": "local",
                  "state": "ready",
                  "version": "4.0.0",
                },
                Object {
                  "source": "local",
                  "state": "ready",
                  "version": "5.0.0",
                },
              ],
              "versionsToShow": Array [
                Object {
                  "source": "local",
                  "state": "ready",
                  "version": "1.0.0",
                },
                Object {
                  "source": "local",
                  "state": "ready",
                  "version": "2.0.0",
                },
                Object {
                  "source": "local",
                  "state": "ready",
                  "version": "3.0.0",
                },
                Object {
                  "source": "local",
                  "state": "ready",
                  "version": "4.0.0",
                },
                Object {
                  "source": "local",
                  "state": "ready",
                  "version": "5.0.0",
                },
              ],
            }
          }
          currentVersion={
            Object {
              "source": "local",
              "state": "ready",
              "version": "4.0.0",
            }
          }
          onVersionSelect={[Function]}
        />
      </Blueprint3.ButtonGroup>
    </Component>
    <Component>
      Latest Version
      <Blueprint3.ButtonGroup
        fill={true}
      >
        <VersionSelect
          appState={
            Object {
              "channelsToShow": Array [
                "Stable",
              ],
              "setVersion": [MockFunction],
              "statesToShow": Array [
                "ready",
              ],
              "versions": Array [
                Object {
                  "source": "local",
                  "state": "ready",
                  "version": "1.0.0",
                },
                Object {
                  "source": "local",
                  "state": "ready",
                  "version": "2.0.0",
                },
                Object {
                  "source": "local",
                  "state": "ready",
                  "version": "3.0.0",
                },
                Object {
                  "source": "local",
                  "state": "ready",
                  "version": "4.0.0",
                },
                Object {
                  "source": "local",
                  "state": "ready",
                  "version": "5.0.0",
                },
              ],
              "versionsToShow": Array [
                Object {
                  "source": "local",
                  "state": "ready",
                  "version": "1.0.0",
                },
                Object {
                  "source": "local",
                  "state": "ready",
                  "version": "2.0.0",
                },
                Object {
                  "source": "local",
                  "state": "ready",
                  "version": "3.0.0",
                },
                Object {
                  "source": "local",
                  "state": "ready",
                  "version": "4.0.0",
                },
                Object {
                  "source": "local",
                  "state": "ready",
                  "version": "5.0.0",
                },
              ],
            }
          }
          onVersionSelect={[Function]}
        />
      </Blueprint3.ButtonGroup>
    </Component>
  </div>
  <div
    className="bp3-dialog-footer"
  >
    <div
      className="bp3-dialog-footer-actions"
    >
      <Blueprint3.Button
        disabled={true}
        icon="play"
        key="submit"
        onClick={[Function]}
        text="Begin"
      />
      <Blueprint3.Button
        icon="cross"
        key="cancel"
        onClick={[Function]}
        text="Cancel"
      />
    </div>
  </div>
</Blueprint3.Dialog>
`;
